Fix label activity spacing

--- a/source/content.css
+++ b/source/content.css
@@ -717,6 +717,7 @@ body > .footer ul:first-of-type li:first-of-type { /* The `© 2017 GitHub, Inc.`
 	position: relative;
 }
 .dashboard .d-flex.border-bottom.border-gray-light .border.rounded-1 {
+	margin-top: 8px !important;
 	position: absolute;
 	top: 100%;
 	left: 0;
@@ -726,9 +727,6 @@ body > .footer ul:first-of-type li:first-of-type { /* The `© 2017 GitHub, Inc.`
 	transition: opacity 0.2s ease-in-out;
 	pointer-events: none;
 }
-.dashboard .d-flex.border-bottom.border-gray-light .border.rounded-1.mt-3 {
-	margin: 0 !important;
-}
 .dashboard .d-flex.border-bottom.border-gray-light:hover .border.rounded-1 {
 	opacity: 1;
 }
@@ -736,4 +734,5 @@ body > .footer ul:first-of-type li:first-of-type { /* The `© 2017 GitHub, Inc.`
 /* Make activities narrower */
 .dashboard .d-flex.border-bottom.border-gray-light {
 	padding: 8px 0 !important;
+	align-items: baseline !important;
 }
